--- a/navbar/styles.css
+++ b/navbar/styles.css
@@ -9,6 +9,10 @@ body {
   left: 0px;
 }
 
+.navbar.active {
+  background-color: white;
+}
+
 .nav-header {
   background-color: white;
   padding: 5px 10px 5px 10px;
@@ -26,12 +30,31 @@ body {
   right: 5px;
 }
 
+.hamburger.active {
+  transform: rotate(90deg);
+  transition: transform 0.2s ease-in-out;
+}
+
 .links {
   height: 0;
   overflow: hidden;
-  transition: var(--transition);
+  list-style-type: none;
 }
 
-.show-links {
+.links a {
+  color: black;
+  text-decoration: none;
+}
+
+.links.active {
   height: auto;
+}
+
+.links.active li {
+  padding: 10px;
+  left: 0;
+}
+
+.links.active li:hover {
+  background-color: lightgray;
 }
