--- a/carousel/style.css
+++ b/carousel/style.css
@@ -1,14 +1,34 @@
 body {
-  background-color: rgba(0, 0, 0, 0.4);
   font-family: sans-serif;
   color: white;
   text-align: center;
 }
 
+.card {
+  border: 1px solid black;
+  border-radius: 25px;
+  width: 380px;
+  height: 550px;
+  position: fixed;
+  top: 5%;
+  left: 50%;
+  margin-left: -190px;
+}
+
+.title-card {
+  position: absolute;
+  width: 380px;
+  border-radius: 25px 25px 0px 0px;
+  background-color: cornflowerblue;
+}
+
 .carousel {
   width: 200px;
   margin: auto;
+  margin-top: 130px;
   overflow: hidden;
+  border: 2px solid black;
+  border-radius: 5px;
 }
 
 .slider {
@@ -21,6 +41,7 @@ button {
   width: 50px;
   height: 50px;
   left: 50%;
+  margin-top: 25px;
   border: none;
   border-radius: 50px;
 }
